# testPackage

./: pyproject.toml
myTestPackage/: main.py
myTestPackage.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
myTestPackage/mult/: mult.py
